# SED-Time-Bank

./: CMakeLists.txt  README.txt  main  main.cpp  member.json  system.cpp  testfile.cpp
Users/Admin/: admin.hpp
Users/Member/: member.hpp
src/: a.out  admin.json  main  member.json  system.cpp
src/AvailableJob/: AvailableJob.hpp  availableJob.cpp
src/AvailableJobs/: AvailableJobs.hpp  availableJobs.cpp
src/Classes/AvailableJob/: AvailableJob.hpp
src/Classes/Period/: period.cpp
src/Classes/Review/: Review.hpp
src/Classes/Skill/: Skill.hpp  skill.cpp
src/Database/: Database.hpp  MemberDatabase.cpp  database.cpp
src/Period/: Period.hpp  period.cpp
src/Request/: Request.cpp  Request.hpp
src/Review/: Review.cpp  Review.hpp
src/Skill/: Skill.hpp  skill.cpp
src/Skills/: Skill.hpp  skill.cpp
src/Systems/: MenuSystem.hpp  Systems.hpp  UserSystem.hpp  menuSystem.cpp  userSystem.cpp
src/Systems/MenuSystem/: MenuSystem.hpp  menuSystem.cpp
src/Systems/MenuSystem/Interfaces/: AddAvailableJob.cpp  AdminMenu.cpp  Block_member_interface.cpp  Find_supporter.cpp  GuestMenu.cpp  LogInRegisterMenu.cpp  MemberMenu.cpp  UpdateAvailableJob.cpp  UpdateInfo.cpp  ViewCurrentRequests.cpp  block_member.cpp  change_new_password.cpp  find_all_supporter.cpp  find_supporter_availableTime.cpp  find_supporter_city.cpp  unblock_member.cpp
src/Systems/MenuSystem/Methods/: ClearScreen.cpp  ShowMembers.cpp
src/Systems/UserSystem/: UserSystem.hpp  userSystem.cpp
src/Users/: Users.hpp
src/Users/Admin/: admin.cpp  admin.hpp
src/Users/Member/: member.cpp  member.hpp
src/Users/User/: user.cpp  user.hpp
src/Utils/: JsonConversion.hpp  jsonConversion.cpp
(+33 files in other folders)
